[gd_scene load_steps=3 format=3 uid="uid://jlood4k8vocs"]

[ext_resource type="Script" path="res://scenes/ui/game_ui.gd" id="1_hn4de"]

[sub_resource type="LabelSettings" id="LabelSettings_5ugro"]
font_size = 64

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hn4de")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ShadowReloadTimer" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "12"
label_settings = SubResource("LabelSettings_5ugro")

[node name="ReloadTimer" type="Timer" parent="."]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
